@@ -1,4 +1,4 @@
-MANIFEST for byacc, version v1_9
+MANIFEST for byacc, version MSDOS-16bit
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 ACKNOWLEDGEMENTS                original version of byacc - 1993
@@ -7,6 +7,7 @@ NEW_FEATURES                    original version of byacc - 1993
 NOTES                           original version of byacc - 1993
 NO_WARRANTY                     original version of byacc - 1993
 README                          original version of byacc - 1993
+README.DOS                      notes on an MSDOS 16-bit port
 closure.c                       original version of byacc - 1993
 defs.h                          original version of byacc - 1993
 error.c                         original version of byacc - 1993
